src/objects/Application_Download_Stats__c.object
<CustomObject>
    <description>Downloaded Statistics from Google Play / Emporium and iOS for each application by Day.</description>
    <fields>
        <fullName>Application__c</fullName>
        <label>Application</label>
        <referenceTo>Application__c</referenceTo>
        <relationshipLabel>Application Download Stats</relationshipLabel>
        <relationshipName>Application_Download_Stats</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Carrier_Input__c</fullName>
        <label>Carrier Input</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Carrier__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Carrier</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Application Download Stats</relationshipLabel>
        <relationshipName>Application_Download_Stats</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <label>Category</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Country</label>
        <referenceTo>Country__c</referenceTo>
        <relationshipLabel>Application Download Stats</relationshipLabel>
        <relationshipName>Application_Download_Stats</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_last_download__c</fullName>
        <label>Date_last_download</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Device__c</fullName>
        <label>Device</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Language_Input__c</fullName>
        <label>Language Input</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Number_of_downloads__c</fullName>
        <label>Number_of_downloads</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Overall__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Overall</label>
        <referenceTo>Application_Download_Stats__c</referenceTo>
        <relationshipLabel>Application Download Stats</relationshipLabel>
        <relationshipName>Application_Download_Stats</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Package_Name__c</fullName>
        <label>Package Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UniqueID_Length__c</fullName>
        <formula>LEN(UniqueID__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>UniqueID Length</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>UniqueID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>UniqueID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Uploaded_by__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Uploaded By</label>
        <referenceTo>Motorola_Core_Directory__c</referenceTo>
        <relationshipLabel>Application Download Stats</relationshipLabel>
        <relationshipName>Application_Download_Stats</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Uploaded_on__c</fullName>
        <label>Uploaded_on</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Version__c</fullName>
        <label>Version</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>country_Input__c</fullName>
        <label>country Input</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>current_device_installs__c</fullName>
        <label>current_device_installs</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>current_user_installs__c</fullName>
        <label>current_user_installs</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>daily_anrs__c</fullName>
        <label>daily_anrs</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>daily_avg_rating__c</fullName>
        <label>daily_avg_rating</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>daily_crashes__c</fullName>
        <label>daily_crashes</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>daily_device_installs__c</fullName>
        <label>daily_device_installs</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>daily_device_uninstalls__c</fullName>
        <label>daily_device_uninstalls</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>daily_device_upgrades__c</fullName>
        <label>daily_device_upgrades</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>daily_user_installs__c</fullName>
        <label>daily_user_installs</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>daily_user_uninstalls__c</fullName>
        <label>daily_user_uninstalls</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>os_version__c</fullName>
        <label>os_version</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>total_avg_rating__c</fullName>
        <label>total_avg_rating</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>total_user_installs__c</fullName>
        <label>total_user_installs</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Application Download Stats</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Application Download Stats</pluralLabel>
    <recordTypes>
        <fullName>Emporium</fullName>
        <active>true</active>
        <label>Emporium</label>
    </recordTypes>
    <recordTypes>
        <fullName>Google_Play_Store</fullName>
        <active>true</active>
        <label>Google Play Store</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>